--- a/crossplane-packages/utils/compositions/object-syncer/resources/composition.yaml
+++ b/crossplane-packages/utils/compositions/object-syncer/resources/composition.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: infitx.org/v1alpha1
-    kind: ObjectSyncer
+    kind: XObjectSyncer
   mode: Pipeline
   pipeline:
 
