changes for config

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -301,8 +301,9 @@ capi_cluster_proxmox_worker_replicas: "'3'"
 capi_cluster_storage_name: "pve-sdb"
 ##end capi
 
+
 # env_common_platform db settings
-env_common_platform_postgres_rdbms_provider: "private-dbaas"
+env_rdbms_provider: "rds"
 #env_common_platform db rds specific
 env_common_platform_rds_engine: "aurora-mysql"
 env_common_platform_rds_engine_version: "8.0.mysql_aurora.3.04.0"
@@ -324,7 +325,6 @@ env_common_platform_perc_pgdb_helm_version: "2.4.0"
 ## end of env_common_platform db settings
 
 # env_common_mojaloop db settings
-env_common_mojaloop_postgres_rdbms_provider: "private-dbaas"
 #env_common_mojaloop db rds specific
 env_common_mojaloop_rds_engine: "aurora-mysql"
 env_common_mojaloop_rds_engine_version: "8.0.mysql_aurora.3.04.0"
