--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-rds-monolith.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-rds-monolith.yaml
@@ -1,4 +1,4 @@
-common-platform-db:
+common_platform_db:
   app_owner: "platform"
   external_resource_config:
     password_key_name: common_platform_db_password
@@ -54,9 +54,9 @@ common-platform-db:
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-platform-db-secret
     master_user_password_secret_key: password
-    logical_service_name: common-platform-db
+    logical_service_name: common_platform_db
     logical_service_port: 3306
-common-mojaloop-db:
+common_mojaloop_db:
   app_owner: "mojaloop"
   external_resource_config:
     password_key_name: common_mojaloop_db_password
