--- a/crossplane-packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
+++ b/crossplane-packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
@@ -2,18 +2,17 @@ apiVersion: database.infitx.org/v1alpha1
 kind: XSqlPercona
 metadata:
   name: example-sql
-  namespace: postgres-operator
+  namespace: gitlab
 spec:
   parameters:
     dbType: postgres
-
+    dbNamespace: testdb
     postgres:
       crVersion: "2.5.0"
       pgVersion: 16
       image: percona/percona-postgresql-operator:2.5.0-ppg16.4-postgres
       imagePullPolicy: Always
       dbDeployPrefix: mydb
-      dbName: mydatabase
       dbUsername: admin
       dbSecret: db-secret
       replicas: 1
@@ -41,7 +40,7 @@ spec:
 
 
   providerConfigsRef:
-    scK8sProviderName: kubernetes-provider
+    scK8sProviderName: sc-kubernetes-provider
     ccK8sProviderName: kubernetes-provider
   managementPolicies:
     - "*"
