feat: add configuration for validation

--- a/crossplane-packages/netbird/compositions/post-config/test/providers.yaml
+++ b/crossplane-packages/netbird/compositions/post-config/test/providers.yaml
@@ -5,3 +5,11 @@ metadata:
   name: provider-kubernetes
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.15.0
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: netbird-crossplane-provider
+spec:
+  package: ghcr.io/infitx-org/netbird-crossplane-provider:v0.0.3
