--- a/crossplane-packages/databases/compositions/sql-percona/resources/composition.yaml
+++ b/crossplane-packages/databases/compositions/sql-percona/resources/composition.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: database.infitx.org/v1alpha1
-    kind: XSqlPercona
+    kind: SqlPercona
   mode: Pipeline
   pipeline:
 
