--- a/crossplane-packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
+++ b/crossplane-packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
@@ -7,7 +7,7 @@ spec:
   parameters:
     dbType: postgres
     dbNamespace: testdb
-
+    secretNamespace: gitlab
     postgres:
       crVersion: "2.5.0"
       pgVersion: 16
