--- a/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
@@ -36,7 +36,16 @@ cephBlockPools:
       reclaimPolicy: Delete
       allowVolumeExpansion: true
       volumeBindingMode: "Immediate"
-      imageFormat: "2"
+      parameters:
+        imageFormat: "2"
+        imageFeatures: layering
+        csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
+        csi.storage.k8s.io/provisioner-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+        csi.storage.k8s.io/controller-expand-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
+        csi.storage.k8s.io/node-stage-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/fstype: ext4
 
 cephFileSystems:
   - name: ceph-filesystem
@@ -58,6 +67,14 @@ cephFileSystems:
       reclaimPolicy: Delete
       allowVolumeExpansion: true
       volumeBindingMode: "Immediate"
+      parameters:
+        csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+        csi.storage.k8s.io/provisioner-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+        csi.storage.k8s.io/controller-expand-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+        csi.storage.k8s.io/node-stage-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/fstype: ext4
 
 cephObjectStores:
   - name: ceph-objectstore
