--- a/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
+++ b/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
@@ -19,6 +19,6 @@ spec:
     sslCertificateRef: objectstore-internal-tls
     instances: 1
     priorityClassName: system-cluster-critical
-    rgwCommandFlags:
-      debug_ms: ${ARGOCD_ENV_rgw_log_level}
-      debug_rgw: ${ARGOCD_ENV_rgw_log_level}
+#    rgwCommandFlags:
+#      debug_ms: ${ARGOCD_ENV_rgw_log_level}
+#      debug_rgw: ${ARGOCD_ENV_rgw_log_level}
