--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -50,11 +50,16 @@ vault_crossplane_modules_version: "1.0.0"
 terraform_crossplane_modules_version: "0.16.0"
 ansible_crossplane_modules_version: "0.6.0"
 aws_crossplane_module_version: "0.49.2"
-crossplane_func_pat_version: "0.2.1"
 k8s_crossplane_module_version: "0.11.4"
 aws_s3_crossplane_module_version: "1.21.0"
 aws_iam_crossplane_module_version: "1.21.0"
+crossplane_func_patch_and_transform_version: "0.8.2"
 crossplane_func_go_templating_version: "0.8.0"
+crossplane_func_kcl_version: "0.11.3"
+crossplane_func_auto_ready_version: "0.4.2"
+crossplane_package_buckets_version: "v5-14171170195-1"
+crossplane_package_utils_version: "v5-14171170195-1"
+crossplane_package_databases_version: "v2-14171198023-1"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
