--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-kube-providerconfig.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-kube-providerconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: sc-kubernetes-provider
+  name:  ${ARGOCD_ENV_sc_kubernetes_provider_name}
 spec:
   credentials:
     source: Secret
