--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - rook-ceph-namespace.yaml
-  - rbac.yaml
-  - external-secrets.yaml
+  - sync-secrets-cm.yaml
 
 helmCharts:
   - name: rook-ceph
@@ -18,6 +17,6 @@ helmCharts:
     releaseName: rook-ceph-cluster
     version: ${ARGOCD_ENV_rook_ceph_helm_version}
     repo: https://charts.rook.io/release
-    valuesFile: ceph-external-values.yaml
+    valuesFile: ceph-external-cluster-values.yaml
     namespace: ${ARGOCD_ENV_storage_namespace}
     includeCRDs: true
