--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -118,7 +118,8 @@ spec:
             - ${ARGOCD_ENV_capi_cluster_proxmox_host_sshkey}
           user: ubuntu
           password: ${ARGOCD_ENV_capi_cluster_proxmox_host_password}
-          chpasswd: { expire: "false" }
+          chpasswd:
+            expire: false
           manage_etc_hosts: true
           runCmd:
             - "modprobe overlay"
@@ -262,7 +263,8 @@ spec:
             - ${ARGOCD_ENV_capi_cluster_proxmox_host_sshkey}
           user: ubuntu
           password: ${ARGOCD_ENV_capi_cluster_proxmox_host_password}
-          chpasswd: { expire: "false" }
+          chpasswd:
+            expire: false
           manage_etc_hosts: true
           runCmd:
             - "modprobe overlay"
