--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -119,7 +119,7 @@ spec:
           user: ubuntu
           password: ${ARGOCD_ENV_capi_cluster_proxmox_host_password}
           chpasswd:
-            expire: false
+            expire: "false"
           manage_etc_hosts: true
           runCmd:
             - "modprobe overlay"
@@ -264,7 +264,7 @@ spec:
           user: ubuntu
           password: ${ARGOCD_ENV_capi_cluster_proxmox_host_password}
           chpasswd:
-            expire: false
+            expire: "false"
           manage_etc_hosts: true
           runCmd:
             - "modprobe overlay"
