--- a/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
@@ -47,34 +47,38 @@ cephBlockPools:
         csi.storage.k8s.io/node-stage-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
         csi.storage.k8s.io/fstype: ext4
 
-cephFileSystems: {}
-  # - name: ceph-filesystem
-  #   spec:
-  #     metadataPool:
-  #       replicated:
-  #         size: 3
-  #     dataPools:
-  #       - failureDomain: host
-  #         replicated:
-  #           size: ${ARGOCD_ENV_rook_ceph_pool_replication_size}
-  #         name: data0
-  #   storageClass:
-  #     enabled: true
-  #     isDefault: false
-  #     name: ceph-filesystem
-  #     # (Optional) specify a data pool to use, must be the name of one of the data pools above, 'data0' by default
-  #     pool: data0
-  #     reclaimPolicy: Delete
-  #     allowVolumeExpansion: true
-  #     volumeBindingMode: "Immediate"
-  #     parameters:
-  #       csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-  #       csi.storage.k8s.io/provisioner-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
-  #       csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-  #       csi.storage.k8s.io/controller-expand-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
-  #       csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-  #       csi.storage.k8s.io/node-stage-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
-  #       csi.storage.k8s.io/fstype: ext4
+cephFileSystems:
+  - name: ceph-filesystem
+    spec:
+      metadataPool:
+        replicated:
+          size: 3
+      dataPools:
+        - failureDomain: host
+          replicated:
+            size: ${ARGOCD_ENV_rook_ceph_pool_replication_size}
+          name: data0
+      metadataServer:
+      activeCount: 1
+      activeStandby: true
+      priorityClassName: system-cluster-critical
+    storageClass:
+      enabled: true
+      isDefault: false
+      name: ceph-filesystem
+      # (Optional) specify a data pool to use, must be the name of one of the data pools above, 'data0' by default
+      pool: data0
+      reclaimPolicy: Delete
+      allowVolumeExpansion: true
+      volumeBindingMode: "Immediate"
+      parameters:
+        csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+        csi.storage.k8s.io/provisioner-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+        csi.storage.k8s.io/controller-expand-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+        csi.storage.k8s.io/node-stage-secret-namespace: "${ARGOCD_ENV_storage_namespace}"
+        csi.storage.k8s.io/fstype: ext4
 
 cephObjectStores:
   - name: ceph-objectstore
