--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
@@ -39,7 +39,7 @@ spec:
   managementPolicies:
     - "*"
 ---
-apiVersion: infitx.org/v1alpha1
+apiVersion: mojaloop.io/v1alpha1
 kind: XObjectSyncer
 metadata:
   name: rook-ceph-mon-endpoints-external
