--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: mojaloop.io/v1alpha1
+apiVersion: utils.mojaloop.io/v1alpha1
 kind: XObjectSyncer
 metadata:
   name: rook-external-config
@@ -19,7 +19,7 @@ spec:
   managementPolicies:
     - "*"
 ---
-apiVersion: mojaloop.io/v1alpha1
+apiVersion: utils.mojaloop.io/v1alpha1
 kind: XObjectSyncer
 metadata:
   name: external-cluster-user-command
@@ -39,7 +39,7 @@ spec:
   managementPolicies:
     - "*"
 ---
-apiVersion: mojaloop.io/v1alpha1
+apiVersion: utils.mojaloop.io/v1alpha1
 kind: XObjectSyncer
 metadata:
   name: rook-ceph-mon-endpoints-external
