--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: utils.mojaloop.io/v1alpha1
-kind: XObjectSyncer
+kind: ObjectSyncer
 metadata:
   name: rook-external-config
   namespace:  ${ARGOCD_ENV_storage_namespace}
@@ -20,7 +20,7 @@ spec:
     - "*"
 ---
 apiVersion: utils.mojaloop.io/v1alpha1
-kind: XObjectSyncer
+kind: ObjectSyncer
 metadata:
   name: external-cluster-user-command
   namespace: ${ARGOCD_ENV_storage_namespace}
@@ -40,7 +40,7 @@ spec:
     - "*"
 ---
 apiVersion: utils.mojaloop.io/v1alpha1
-kind: XObjectSyncer
+kind: ObjectSyncer
 metadata:
   name: rook-ceph-mon-endpoints-external
   namespace: ${ARGOCD_ENV_storage_namespace}
