--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -10,7 +10,7 @@
 #     destinationK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "git-lfs-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -31,7 +31,7 @@ spec:
       maxSize: "${ARGOCD_ENV_git_lfs_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-artifacts-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -52,7 +52,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_artifacts_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-uploads-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -73,7 +73,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_uploads_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-packages-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -94,7 +94,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_packages_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "registry-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -115,7 +115,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_registry_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-mr-diffs-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -136,7 +136,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_mrdiffs_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-ci-secure-files-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -157,7 +157,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_cisecurefiles_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-terraform-state-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -178,7 +178,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_tfstate_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-dependency-proxy-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -199,7 +199,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_dep_proxy_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-runner-cache-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -220,7 +220,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-backups-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
@@ -241,7 +241,7 @@ spec:
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
 apiVersion: mojaloop.io/v1alpha1
-kind: XObjectStore
+kind: ObjectStore
 metadata:
   name: "gitlab-backups-tmp-${ARGOCD_ENV_cluster_name}"
   namespace: ${ARGOCD_ENV_gitlab_namespace}
