--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
@@ -52,7 +52,7 @@ spec:
       name: rook-ceph-mon-endpoints-external
     destination:
       namespace: ${ARGOCD_ENV_storage_namespace}
-      name: rook-ceph-mon-endpoints-external
+      name: rook-ceph-mon-endpoints
   providerConfigsRef:
     sourceK8sProviderName: "sc-kubernetes-provider"
     destinationK8sProviderName: "kubernetes-provider"
